--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -15,7 +15,7 @@ jobs:
           java-version: 17
           distribution: adopt
       - name: Build
-        run: chmod +x ./gradlew
+        run: ./gradlew
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
