--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -15,9 +15,7 @@ jobs:
           java-version: 17
           distribution: adopt
       - name: Build
-        run: chmod +x ./gradlew 
-        - name: Build
-        run: ./gradlew build
+        run: chmod +x ./gradlew, ./gradlew build
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
