--- a/.github/workflows/dev_build.yml
+++ b/.github/workflows/dev_build.yml
@@ -14,8 +14,10 @@ jobs:
         with:
           java-version: 17
           distribution: adopt
+      - name: idk
+        run: chmod +x ./gradlew
       - name: Build
-        run: chmod +x ./gradlew, ./gradlew build
+        run: ./gradlew build
       - name: Release
         uses: marvinpinto/action-automatic-releases@latest
         with:
